--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -2833,7 +2833,7 @@ input[type="checkbox"]:checked ~ .checkmark:before {
 }
 .contacts{
 	width:100%;
-	padding-bottom
+	padding-bottom: unset;
 }
 .video-details{
 	width:100%;
